# wg-p2p-nm-plugin

./: Cargo.toml  Makefile  build.rs  nm-wg-p2p-vpn-service.conf  nm-wg-p2p-vpn-service.name
src/gui/: bulletinboard.rs  editor.rs  ip_settings.rs  lib.rs  vpn_settings.rs  wg-p2p-vpn-editor-plugin.c  wg-p2p-vpn-editor-plugin.h  wg-p2p-vpn-editor.c  wg-p2p-vpn-editor.h  wg-p2p-vpn-editor.ui
src/service/: config.rs  ip_settings.rs  link.rs  netlink.rs  service.c  service.rs  variant.rs  vpn_settings.rs
src/shared/: nm-default.h
